# SnowTower

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  snowflake.yml
.claude/: CONSOLIDATION_SUMMARY.md
.claude/agents/: ADD_USER_AGENT.md  CICD_AGENT.md  CONFIG_AGENT.md  COST_AGENT.md  DATA_ENGINEER_AGENT.md  DEPLOYMENT_AGENT.md  DEPLOYMENT_TROUBLESHOOTING_AGENT.md  DOCS_AGENT.md  ONBOARDING_AGENT.md  OPTIMIZED_META_AGENT.md  PROJECT_ARCHITECT_AGENT.md  PYTHON_DEVELOPMENT_AGENT.md  SECURITY_AGENT.md  SNOWDDL_EXPERT_AGENT.md  STATE_COMPARISON_AGENT.md  docs-architect.md  mermaid-diagram-architect.md  snow-cli-expert.md  snowflake-expert.md  snowtower-operations-manager.md  snowtower-security-manager.md  snowtower-snowddl-manager.md  snowtower-user-manager.md  ui-ux-designer.md
.claude/patterns/: SERVICE_ACCOUNT_CREATION_PATTERN.md
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: new-user-request.yml
.github/workflows/: changelog.yml  ci.yml  labeler.yml  release.yml
docs/: NEXT_STEPS_SCHEMA_DRIFT.md  README.md  SCHEMA_DRIFT_ELIMINATION_PLAN.md  mkdocs.yml
docs/agents/: CLAUDE.md  PATTERNS.md  README.md
docs/contributing/: AGENT_COMMUNICATION_MATRIX.md  AGENT_SAFETY_ARCHITECTURE.md  CONTRIBUTING.md  HOW_TO_TEST.md  SECURITY_PROTOCOLS_UPDATE.md  agent_critical_rules.md
docs/examples/: RECCE_SETUP.md  demo_security_features.py  sample_github_issue.json  sample_service_account_issue.json  streamlit_viewer_role_advanced.yaml.reference
docs/guide/: ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  CONFIGURATION_REFERENCE.md  MANAGEMENT_COMMANDS.md  MONITORING.md  QUICKSTART.md  QUICK_REFERENCE.md  SCHEMA_GRANTS.md  SECURITY_NOTICE.md  TROUBLESHOOTING.md  USER_CREATION_GUIDE.md
docs/llm-context/: CONTEXT.md  README.md
docs/releases/: CHANGELOG.md  RELEASE_CHECKLIST.md
scripts/: README.md  __init__.py  apply_dbt_read_access_fix.py  apply_proj_stripe_ownership_fix.py  apply_schema_grants.py  backup_restore.py  cost_optimization.py  create_streamlit_viewer_role.sql  deploy_github_monitor.py  deploy_safe.py  diagnose_dbt_permissions.py  fix_table_permissions.sql  generate_passwords.py  generate_rsa_keys_batch.py  generate_terraform.py  generate_user_from_issue.py  github_integration.py  github_issue_to_snowddl.py  health_check.py  investigate_object_ownership.py  manage_streamlit_viewer.py  manage_users.py  manage_warehouses.py  monitor_audit.py  monitor_health.py  monitor_logs.py  monitor_metrics.py  parse_schema_grants.py  query_all_schemas.py  query_schema_owner.py  run_table_permissions_fix.py  security_audit.py  setup_github_integration.py  test_schema_management.py  transfer_ownership_to_dbt.py  user_create.py  validate_config.py  validate_schema_grants.py
scripts/bulk_update_examples/: email_update.csv  roles_update.csv  warehouse_update.csv
scripts/examples/: warehouse_resize.csv
scripts/sql/: 01_create_stage_infrastructure.sql  02_create_stored_procedures.sql  03_create_task_scheduler.sql
snowddl/: README.md  authentication_policy.yaml  business_role.yaml  external_stages.yaml  internal_stages.yaml  network_policy.yaml  password_policy.yaml  resource_monitor.yaml  resource_monitor.yaml.SAFE  secret.yaml  session_policy.yaml  storage_integration.yaml  tech_role.yaml  user.yaml  warehouse.yaml
snowddl/DEV_EXAMPLE/: params.yaml
snowddl/LIGHTDASH/: params.yaml
snowddl/OMNI/: params.yaml
snowddl/PROJ_STRIPE/: params.yaml
snowddl/SNOWTOWER_APPS/: params.yaml
snowddl/SOURCE_STRIPE/: params.yaml
src/: banner.py  deprecation.py  diagnose_auth.py  docs_commands.py  encrypt_password.py  env_loader.py  fix_auth.py  help_cli.py  investigate_resource_monitors.py  management_cli.py  snowddl_plan_wrapper.py  validation_cli.py  verify_password.py
src/automation/: README.md  __init__.py  issue_parser.py  pr_creator.py  validator.py  yaml_generator.py
src/cli/: __init__.py  automation_cli.py  docs_cli.py  monitor_cli.py  schema_cli.py  snowddl_cli.py  util_cli.py
src/github_integration/: github_monitor.py
src/snowddl_core/: EXAMPLE_USAGE.py  README.md  __init__.py  account_objects.py  base.py  exceptions.py  mixins.py  project.py  snowddl_types.py  validation.py
src/snowtower_core/: README.md  __init__.py  alerts.py  audit.py  logging.py  managers.py  metrics.py  models.py
src/snowtower_schemas/: __init__.py
src/snowtower_snowddl/: __init__.py  cli.py  intelligent_apply.py
src/user_management/: README.md  __init__.py  cli.py  encryption.py  health_check.py  manager.py  password_generator.py  rsa_keys.py  snowddl_account.py  yaml_handler.py
terraform-snowflake-boilerplate/: README.md  databases.tf  grants.tf  main.tf  policies.tf  resource_monitors.tf  roles.tf  users.tf  warehouses.tf
test-output/: plan_with_exclusion.txt  plan_without_exclusion.txt
tests/: README.md  __init__.py  conftest.py  test_encryption.py  test_generate_terraform.py  test_management_cli.py  test_monitoring.py  test_password_generation.py  test_rsa_keys.py  test_snowddl_base.py  test_snowddl_core.py  test_snowddl_exceptions.py  test_snowddl_types.py  test_snowddl_validation.py  test_terraform_generator.py  test_user_management.py  test_user_manager.py  test_validate_config.py  test_yaml_handler.py
tests/fixtures/: __init__.py  config_templates.py
(+35 files in other folders)
